# se-labs-cs221be

./: CMakeLists.txt  Initial code  Lab 2.cpp  Lab 2.sln  Main.cpp  Modified code  Modified code by using functions in C++  README.md  Test.cpp  UNIT_test.cpp  Unit tests  UnitTest1.cpp  calculate.cpp  calculate.h  calculation.cpp  calculation.hpp  checks.cpp  code.cpp  input.cpp  input.hpp  lab2.1.cpp  lab2.2.cpp  lab2.cpp  lab3Code.cpp  lab5.cpp  main.cpp  print.cpp  print.hpp  task.cpp  testFormula.cpp  tests.cpp  unit_tests.cpp
